--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -39,8 +39,8 @@ main {
 
 .card {
   background: white;
-  width: 60vw;
-  padding: 2.4rem;
+  width: 90vw;
+  padding: 2rem 2.4rem;
   border-radius: 8px;
   box-shadow:  rgba(0, 0, 0, 0.1) 0px 5px 15px 0px;
   margin-bottom: 4rem;
@@ -92,11 +92,23 @@ main {
   padding-top:var(--top-spacing);
   color: rgba(61, 103, 143, 0.751);
   display: none;
+  font-size: 1.5rem;
 
 }
 
-@media (min-width: 500px) {
+
+@media (min-width: 800px) {
   .card {
-    width: 50vw;
+    width: 70vw;
+  }
+}
+@media (min-width: 960px) {
+  .card {
+    width: 60vw;
+  }
+}
+@media (min-width: 1150px) {
+  .card {
+    width: 45vw;
   }
 }
